# system/api/app/serializers/user_serializer.rb
@@ -1,5 +1,5 @@
 # frozen_string_literal: true
 
 class UserSerializer < Panko::Serializer
-  attributes :id, :email
+  attributes :id, :email, :created_at, :updated_at
 end
